[gd_scene load_steps=38 format=2]

[ext_resource path="res://Char_Sprites/Fall/Warrior_Fall_3.png" type="Texture" id=1]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_9.png" type="Texture" id=2]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_7.png" type="Texture" id=3]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_12.png" type="Texture" id=4]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_10.png" type="Texture" id=5]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_11.png" type="Texture" id=6]
[ext_resource path="res://Char_Sprites/Fall/Warrior_Fall_2.png" type="Texture" id=7]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_8.png" type="Texture" id=8]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_4.png" type="Texture" id=9]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_1.png" type="Texture" id=10]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_5.png" type="Texture" id=11]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_3.png" type="Texture" id=12]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_2.png" type="Texture" id=13]
[ext_resource path="res://Char_Sprites/Attack/Warrior_Attack_6.png" type="Texture" id=14]
[ext_resource path="res://Char_Sprites/idle/Warrior_Idle_3.png" type="Texture" id=15]
[ext_resource path="res://Char_Sprites/idle/Warrior_Idle_4.png" type="Texture" id=16]
[ext_resource path="res://Char_Sprites/idle/Warrior_Idle_5.png" type="Texture" id=17]
[ext_resource path="res://Char_Sprites/Jump/Warrior_Jump_1.png" type="Texture" id=18]
[ext_resource path="res://Char_Sprites/Fall/Warrior_Fall_1.png" type="Texture" id=19]
[ext_resource path="res://Char_Sprites/idle/Warrior_Idle_1.png" type="Texture" id=20]
[ext_resource path="res://Char_Sprites/idle/Warrior_Idle_2.png" type="Texture" id=21]
[ext_resource path="res://Char_Sprites/idle/Warrior_Idle_6.png" type="Texture" id=22]
[ext_resource path="res://Char_Sprites/Jump/Warrior_Jump_2.png" type="Texture" id=23]
[ext_resource path="res://Char_Sprites/Jump/Warrior_Jump_3.png" type="Texture" id=24]
[ext_resource path="res://Player.gd" type="Script" id=25]
[ext_resource path="res://Char_Sprites/Run/Warrior_Run_2.png" type="Texture" id=26]
[ext_resource path="res://Char_Sprites/Run/Warrior_Run_3.png" type="Texture" id=27]
[ext_resource path="res://Char_Sprites/Run/Warrior_Run_4.png" type="Texture" id=28]
[ext_resource path="res://Char_Sprites/Run/Warrior_Run_8.png" type="Texture" id=29]
[ext_resource path="res://Char_Sprites/Run/Warrior_Run_5.png" type="Texture" id=30]
[ext_resource path="res://Char_Sprites/Run/Warrior_Run_7.png" type="Texture" id=31]
[ext_resource path="res://Char_Sprites/Run/Warrior_Run_1.png" type="Texture" id=32]
[ext_resource path="res://Char_Sprites/Run/Warrior_Run_6.png" type="Texture" id=33]
[ext_resource path="res://PickupZone.gd" type="Script" id=34]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "fall",
"speed": 15.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 29 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 17.5 )

[sub_resource type="CircleShape2D" id=4]
radius = 54.0093

[node name="Player" type="KinematicBody2D"]
position = Vector2( 4, 0 )
collision_mask = 2
script = ExtResource( 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 28, -1 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 22, 3 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -5, 4 )
current = true
limit_left = 0
limit_top = -360
limit_right = 2000
limit_bottom = 352
smoothing_enabled = true
editor_draw_limits = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PickupZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
shape = SubResource( 4 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]
